Fixed the collapsing functionality which now works. Also changed color and size of drop down paragraph summary.

--- a/collapsible.css
+++ b/collapsible.css
@@ -1,22 +1,22 @@
 /* Style the button that is used to open and close the collapsible content */
 h1,h2,h3,h4,h5,h6 {
   cursor: pointer;
-  padding: 18px;
-  width: 100%;
+  padding: 15px;
+  width: 75%;
   border: none;
   outline: none;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, h1,h2,h3,h4,h5,h6:hover {
-  /*background-color: #ccc;*/
+  background-color: blanchedalmond;
 }
-
-/* Style the collapsible content. Note: hidden by default */
 
 p {
   padding: 0 18px;
-  display: initial;
+  max-height: 0;
   overflow: hidden;
-  background-color: #f1f1f1;
+  width: 75%;
+  transition: max-height 0.2s ease-out;
+  background-color: darksalmon;
 }
